grammar.js
		source_file: ($) => choice(repeat(";"), $.code),

		code: ($) =>
			seq(
				repeat(";"),
				$.statement,
				repeat(seq(repeat1(";"), $.statement)),
				repeat(";"),
			),

		statement: ($) => choice($.assignment, $.expression),

		assignment: ($) =>
			seq(optional($.assignment_modifier), $.variable, "=", $.expression),

		expression: ($) =>
			choice($.nular_expression, $.unary_expression, $.binary_expression),

		nular_expression: ($) =>
			prec(
				11,
				choice(
					$.nular_command,
					$.variable,
					$.string,
					$.number,
					$.array,
					$.code_block,
					$.parentheses_expression,
				),
			),

		unary_expression: ($) => prec(10, seq($.unary_command, $.expression)),

		binary_expression: ($) =>
			choice(
				prec.left(9, seq($.expression, $.binary_command_9, $.expression)),
				prec.left(8, seq($.expression, $.binary_command_8, $.expression)),
				prec.left(7, seq($.expression, $.binary_command_7, $.expression)),
				prec.left(6, seq($.expression, $.binary_command_6, $.expression)),
				prec.left(5, seq($.expression, $.binary_command_5, $.expression)),
				prec.left(4, seq($.expression, $.binary_command_4, $.expression)),
				prec.left(3, seq($.expression, $.binary_command_3, $.expression)),
				prec.left(2, seq($.expression, $.binary_command_2, $.expression)),
				prec.left(1, seq($.expression, $.binary_command_1, $.expression)),
			),

		variable: ($) => token(prec(-1, /[a-zA-Z_][a-zA-Z0-9_]*/)),

		string: ($) => /"([^"]|"")*"|'([^']|'')*'/,

		number: ($) =>
			/(([0-9]*\.?[0-9]+|[0-9]+\.)([eE][+-]?[0-9]+)?|(0x|\$)[0-9a-fA-F]+)/,

		array: ($) =>
			seq(
				"[",
				optional(seq($.expression, repeat(seq(",", $.expression)))),
				"]",
			),

		code_block: ($) => seq("{", choice(repeat(";"), $.code), "}"),

		parentheses_expression: ($) => seq("(", $.expression, ")"),

		comment: ($) => choice(/\/\/[^\n]*/, /\/\*[^*]*(\*([^*/][^*]*)?)*\*\//),

		binary_command_6: ($) => token(choice("+", "-", /max/i, /min/i)),
